apps/suggestarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suggestarr
  labels:
    app.kubernetes.io/name: suggestarr
    app.kubernetes.io/part-of: suggestarr
spec:
  selector:
    app.kubernetes.io/name: suggestarr
    app.kubernetes.io/part-of: suggestarr
  ports:
    - name: http
      port: 5000
      targetPort: 5000
